<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/edit_money_bag_dialog"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_dialog"
              android:padding="@dimen/dialog_padding"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:layout_marginBottom="@dimen/dialog_padding"
            android:padding="@dimen/dialog_padding"
            android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:inputType="textCapCharacters"
            android:text="@string/add_quantity"
            style="@style/AppDialogTextView"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                style="@style/AppDialogEdittextContainer">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_name"
                    android:inputType="textCapCharacters"
                    style="@style/AppDialogEdittext"
                    android:hint="@string/name_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                style="@style/AppDialogEdittextContainer">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_amount"
                    style="@style/AppDialogEdittext"
                    android:inputType="number"
                    android:hint="@string/amount_hint"/>
        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/save_money_bag"
                android:text="@string/save_new_value"
                style="@style/AppDialogButton"/>
    </LinearLayout>

    <Button
            android:id="@+id/remove_money_bag"
            android:text="@string/delete_money_bag"
            style="@style/AppDialogButton"/>

    <Button
            android:id="@+id/cancel_edit_dialog"
            android:text="@string/cancel"
            style="@style/AppDialogButton"/>
</LinearLayout>