<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/create_money_amount_dialog"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_dialog"
              android:padding="@dimen/dialog_padding"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dialog_padding"
            android:padding="@dimen/dialog_padding"
            android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:text="@string/add_quantity"
            style="@style/AppDialogTextView"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                style="@style/AppDialogEdittextContainer">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_name"
                    style="@style/AppDialogEdittext"
                    android:hint="@string/name_hint"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="horizontal">
            <CheckBox
                    android:id="@+id/amount_type"
                    android:layout_width="46dp"
                    android:layout_height="66dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_remove_black_48dp"
                    android:button="@null"
            />
        <android.support.design.widget.TextInputLayout
                style="@style/AppDialogEdittextContainer">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_amount"
                    style="@style/AppDialogEdittext"
                    android:inputType="number"
                    android:hint="@string/amount_hint"/>
        </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>


    <Button
            android:id="@+id/save_money_amount"
            android:text="@string/save_new_value"
            style="@style/AppDialogButton"/>

    <Button
            android:id="@+id/cancel_edit_dialog"
            android:text="@string/cancel"
            style="@style/AppDialogButton"/>
</LinearLayout>